edits to IPYNB files

--- a/pandas_practice_BLANK.ipynb
+++ b/pandas_practice_BLANK.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "* [Slides](https://docs.google.com/presentation/d/1ZG-IC33qL6dOk-WfwMuiyfzLb-Th1I_XoGNFPpbq8Ps/)\n",
     "* [GitHub repo](https://github.com/lamthuyvo/python-data-nicar2019)\n",
-    "* [Pandas user guide](http://pandas.pydata.org/pandas-docs/stable/user_guide/index.html)"
+    "* [Pandas user guide](http://pandas.pydata.org/pandas-docs/stable/user_guide/index.html)\n",
+    "\n",
+    "**Before running these cells,** you must install Pandas in the environment that is running this Notebook."
    ]
   },
   {
@@ -118,18 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use normal Python len() to see how many rows, how many columns in the dataframe\n",
-    "print(len(census_data))\n",
-    "print(len(census_data.columns))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# or use a pandas command, shape, to get that info about the dataframe\n",
+    "# use the shape command to get see number of rows, columns in the dataframe\n",
     "census_data.shape"
    ]
   },
@@ -146,10 +137,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# see ALL cells in 'county' column - but not really all - first 30 and last 30\n",
+    "# see ALL cells in 'county' column - not really - we have too many rows in this dataframe \n",
     "census_data['county']"
    ]
   },
@@ -173,7 +166,7 @@
    "outputs": [],
    "source": [
     "# pandas assigns each row a number as an index automatically\n",
-    "# we could assign each row a different index, but not necessary\n",
+    "# (we could assign each row a different index, but it's not necessary)\n",
     "# if I know I want to look at only the data in the row with index 350 - \n",
     "census_data.iloc[350]"
    ]
@@ -241,6 +234,26 @@
    "metadata": {},
    "source": [
     "The meaning of each line in the previous result is explained [here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.describe.html). `count` is how many rows were analyzed (4,700). `mean` is the same as the cell before, where we got mean, median, and sum. `mean` is the same as \"average.\" `std` is the [standard deviation](https://www.robertniles.com/stats/stdev.shtml). `min` is the lowest value in the column - here, 0 means that some Census tracts have zero black residents. The three percentiles show us what proportion of rows contain a value equal to or less than that number - so 25% of the Census tracts have 47 or fewer black residents. Finally, `max` tells us the highest value in this column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how many Census tracts (out of 4,700) with fewer than 100 black residents? \n",
+    "len(census_data[census_data['black_alone'] < 100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how many Census tracts (out of 4,700) with fewer than 100 Asian residents? \n",
+    "len(census_data[census_data['asian'] < 100])"
    ]
   },
   {
@@ -458,6 +471,34 @@
    "metadata": {},
    "source": [
     "**Note** that the list (in the output from the previous cell) is in order from most rows to fewest rows. You can see which counties have a large number of Census tracts in this dataset (which might not be complete for some counties)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine all Census tracts for each county and show sum of all tracts' population\n",
+    "census_data.groupby('county_clean')['total_population'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort them by highest to lowest population\n",
+    "counties_pop = census_data.groupby('county_clean')['total_population'].sum()\n",
+    "counties_pop.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is just an introduction to some of the exploration you can do with Pandas. There's much more!"
    ]
   },
   {
