--- a/scraping_practice_BLANK.ipynb
+++ b/scraping_practice_BLANK.ipynb
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I printed only the text in the first LI in each list to test my code, and I have a problem. \"By state and in insular areas\" is not a school. Back on the Wikipedia page, I inspet again, and I find that the heading \"Other private institutions\" is followed (in the HTML) by a table, and *inside the table* there is a UL I do not want.\n",
+    "I printed only the text in the first LI in each list to test my code, and I have a problem. \"By state and in insular areas\" is not a school. Back on the Wikipedia page, I inspect again, and I find that the heading \"Other private institutions\" is followed (in the HTML) by a table, and *inside the table* there is a UL I do not want.\n",
     "\n",
     "This is a typical scraping problem, and we can solve it."
    ]
