updates to IPYNB files

--- a/complete/scraping_practice.ipynb
+++ b/complete/scraping_practice.ipynb
@@ -526,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I printed only the text in the first LI in each list to test my code, and I have a problem. \"By state and in insular areas\" is not a school. Back on the Wikipedia page, I inspet again, and I find that the heading \"Other private institutions\" is followed (in the HTML) by a table, and *inside the table* there is a UL I do not want.\n",
+    "I printed only the text in the first LI in each list to test my code, and I have a problem. \"By state and in insular areas\" is not a school. Back on the Wikipedia page, I inspect again, and I find that the heading \"Other private institutions\" is followed (in the HTML) by a table, and *inside the table* there is a UL I do not want.\n",
     "\n",
     "This is a typical scraping problem, and we can solve it."
    ]
@@ -671,7 +671,13 @@
       "Orlando Culinary Academy Orlando https://en.wikipedia.org/wiki/Orlando_Culinary_Academy Trade/technical institutions\n",
       "Remington College Tampa https://en.wikipedia.org/wiki/Remington_College Trade/technical institutions\n",
       "Ringling College of Art and Design Sarasota https://en.wikipedia.org/wiki/Ringling_College_of_Art_and_Design Trade/technical institutions\n",
-      "Southern Technical College Orlando https://en.wikipedia.org/wiki/Southern_Technical_College Trade/technical institutions\n",
+      "Southern Technical College Orlando https://en.wikipedia.org/wiki/Southern_Technical_College Trade/technical institutions\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Argosy University Tampa https://en.wikipedia.org/wiki/Argosy_University Other private institutions\n",
       "Atlantis University Miami-Dade County https://en.wikipedia.org/wiki/Atlantis_University Other private institutions\n",
       "Beacon College Leesburg https://en.wikipedia.org/wiki/Beacon_College Other private institutions\n",
@@ -708,13 +714,7 @@
       "University of Phoenix Orlando https://en.wikipedia.org/wiki/University_of_Phoenix Other private institutions\n",
       "University of Tampa Tampa https://en.wikipedia.org/wiki/University_of_Tampa Other private institutions\n",
       "Webber International University Babson Park https://en.wikipedia.org/wiki/Webber_International_University Other private institutions\n",
-      "Webster University Ocala https://en.wikipedia.org/wiki/Webster_University Other private institutions\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Webster University Ocala https://en.wikipedia.org/wiki/Webster_University Other private institutions\n",
       "Western Michigan University Cooley Law School Tampa https://en.wikipedia.org/wiki/Western_Michigan_University_Cooley_Law_School Other private institutions\n"
      ]
     }
